[package]
name = "theseus_gui"
version = "0.6.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
theseus = { path = "../../theseus" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"
daedalus = {version = "0.1.15", features = ["bincode"] }
chrono = "0.4.26"

dirs = "5.0.1"

url = "2.2"
uuid = { version = "1.1", features = ["serde", "v4"] }
os_info = "3.7.0"

tracing = "0.1.37"
tracing-error = "0.1"

sentry = "0.30"
sentry-rust-minidump = "0.5"

lazy_static = "1"
once_cell = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
window-shadows = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
